Fix minor alignment issues

--- a/app/assets/stylesheets/bioportal.scss
+++ b/app/assets/stylesheets/bioportal.scss
@@ -35,9 +35,6 @@ input:disabled::placeholder {
 a{
   text-decoration: none !important;
 }
-p {
-  margin-bottom: 0;
-}
 
 body{
   position: relative;
